--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://LêQuangChiến.github.io/baicahan",
+  "homepage": "https://LeQuangChien.github.io/baicahan",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
